force-app/main/default/objects/Deal_Clone_One__c/fields/Business_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Business_Reporting__c</fullName>
    <formula>IF(
INCLUDES(BU__c,&quot;AMPE&quot;),&quot;AMPE&quot;,
IF(
INCLUDES(BU__c,&quot;Healthcare Strategic Growth&quot;),&quot;Healthcare Strategic Growth&quot;,
IF(
INCLUDES(BU__c,&quot;Healthcare Royalty and Income&quot;),&quot;Healthcare Royalty and Income&quot;,
IF(
INCLUDES(BU__c,&quot;AMPE-Core&quot;),&quot;Core PE&quot;,
IF(
INCLUDES(BU__c,&quot;Eur-Core&quot;),&quot;Core PE&quot;,
IF(
INCLUDES(BU__c,&quot;Asia-Core&quot;),&quot;Core PE&quot;,&quot;Null&quot;
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business (Reporting)</label>
    <type>Text</type>
</CustomField>