force-app/main/default/objects/Deal_Clone_One__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deals (Buyer)</relationshipLabel>
    <relationshipName>Deals_Clone</relationshipName>
    <type>Lookup</type>
</CustomField>