force-app/main/default/objects/Deal_Clone_One__c/fields/Buyside_Banker__c.field-meta.xml
<CustomField>
    <fullName>Buyside_Banker__c</fullName>
    <formula>&quot;Use the Banker field to indicate the Buyside Banker&quot;</formula>
    <label>Buyside Banker</label>
    <type>Text</type>
</CustomField>