force-app/main/default/objects/Deal_Clone_One__c/fields/Category_REEquity__c.field-meta.xml
<CustomField>
    <fullName>Category_REEquity__c</fullName>
    <description>PR-2442</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forward Funding</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Various</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>