force-app/main/default/objects/Deal_Clone_One__c/fields/CD_REC__c.field-meta.xml
<CustomField>
    <fullName>CD_REC__c</fullName>
    <label>KKR Closed Date</label>
    <type>Date</type>
</CustomField>