force-app/main/default/objects/Deal_Clone_One__c/fields/CFEA__c.field-meta.xml
<CustomField>
    <fullName>CFEA__c</fullName>
    <inlineHelpText>An initial assessment of climate thesis and investment eligibility based on KKR Climate Framework has been completed by the deal team. Where necessary, third party reviewer has been engaged early to help assess eligibility (C2ES_Climate_Review@kkr.com).</inlineHelpText>
    <label>Climate Framework Eligibility Assessed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>