force-app/main/default/objects/Deal_Clone_One__c/fields/CitySta__c.field-meta.xml
<CustomField>
    <fullName>CitySta__c</fullName>
    <formula>Property_City__c + &quot;, &quot; +  TEXT(Property_State__c)</formula>
    <label>CitySta</label>
    <type>Text</type>
</CustomField>