force-app/main/default/objects/Deal_Clone_One__c/fields/CNP__c.field-meta.xml
<CustomField>
    <fullName>CNP__c</fullName>
    <label>Current Net Production</label>
    <length>255</length>
    <type>Text</type>
</CustomField>