force-app/main/default/objects/Deal_Clone_One__c/fields/Commentary__c.field-meta.xml
<CustomField>
    <fullName>Commentary__c</fullName>
    <label>Commentary (Short)</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>