force-app/main/default/objects/Deal_Clone_One__c/fields/Commentary_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Commentary_Portfolio__c</fullName>
    <label>Portfolio Commentary (Short)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>