force-app/main/default/objects/Deal_Clone_One__c/fields/Common_Status_Asia_sort__c.field-meta.xml
<CustomField>
    <fullName>Common_Status_Asia_sort__c</fullName>
    <formula>IF (Id=&apos;a0q5a00000KKo4W&apos;,11,CASE(Status__c,
&quot;Tracked&quot;,IF(AND(
RecordType.Name=&apos;Real Estate Equity&apos;,
Asia_Office_Count__c&gt;0,
TEXT(Pipeline_StatusRE__c)=&apos;Preliminary - Screen&apos;),2,1),
&quot;Monitor&quot;,IF(AND(
RecordType.Name=&apos;Real Estate Equity&apos;,
Asia_Office_Count__c&gt;0,
TEXT(Pipeline_StatusRE__c)=&apos;Monitor&apos;),1,2),
&quot;Active Evaluation&quot;,3,
&quot;Priority&quot;,4,
&quot;High Priority&quot;,5,
&quot;Completed&quot;,6,
&quot;Portfolio&quot;,7,
&quot;Ex-Portfolio&quot;,8,
&quot;Eliminated&quot;,0,
&quot;Archived&quot;,10,
0))</formula>
    <label>Common Status - Asia sort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>