force-app/main/default/objects/Deal_Clone_One__c/fields/Company_Interest_Level__c.field-meta.xml
<CustomField>
    <fullName>Company_Interest_Level__c</fullName>
    <formula>TEXT(Account__r.Interest_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Interest Level</label>
    <type>Text</type>
</CustomField>