force-app/main/default/objects/Deal_Clone_One__c/fields/Company_Name_Redacted__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Redacted__c</fullName>
    <description>Redacted Company Name</description>
    <formula>IF( Use_Project_Name_Redacted__c = true , IF(ISBLANK(Project_Name__c),&quot;(Project TBD)&quot;,(&quot;(&quot; &amp; Project_Name__c &amp; &quot;)&quot;)), Company_Name_Reporting__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Redacted Company Name</inlineHelpText>
    <label>Company Name Redacted</label>
    <type>Text</type>
</CustomField>