force-app/main/default/objects/Deal_Clone_One__c/fields/Company_Name_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Reporting__c</fullName>
    <formula>IF( Display_Name__c &lt;&gt; &quot;&quot; , Display_Name__c , Account__r.Name )</formula>
    <label>Company Name (Reporting)</label>
    <type>Text</type>
</CustomField>