force-app/main/default/objects/Deal_Clone_One__c/fields/completed_milestones__c.field-meta.xml
<CustomField>
    <fullName>completed_milestones__c</fullName>
    <description>Provides a concatenated text of selected Milestones for deal</description>
    <formula>IF(M1__c = true,&quot;1. Initial spend being incurred&quot; &amp; BR(),&quot;&quot;) &amp;
IF(M2__c = true,&quot;2. Asia Partners Meeting Passed&quot; &amp; BR(),&quot;&quot;) &amp;
IF(M3__c = true,&quot;3. First IC Meeting Passed&quot; &amp; BR(),&quot;&quot;) &amp;
IF(M4__c = true,&quot;4. DD Expense Approved by IC&quot; &amp; BR(),&quot;&quot;) &amp;
IF(M5__c = true,&quot;5. Exclusivity Signed&quot; &amp; BR(),&quot;&quot;) &amp;
IF(M6__c = true,&quot;6. Definitive Agreement Signed&quot; &amp; BR(),&quot;&quot;)</formula>
    <inlineHelpText>should NOT be part of any layout</inlineHelpText>
    <label>completed_milestones</label>
    <type>Text</type>
</CustomField>