force-app/main/default/objects/Deal_Clone_One__c/fields/Confi_Locked__c.field-meta.xml
<CustomField>
    <fullName>Confi_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Compliance only</inlineHelpText>
    <label>Confi-Locked</label>
    <type>Checkbox</type>
</CustomField>