force-app/main/default/objects/Deal_Clone_One__c/fields/Confidential_Deal__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confidential Deal</label>
    <type>Checkbox</type>
</CustomField>