force-app/main/default/objects/Deal_Clone_One__c/fields/Confirm_ESG_DD_Has_Commenced__c.field-meta.xml
<CustomField>
    <fullName>Confirm_ESG_DD_Has_Commenced__c</fullName>
    <inlineHelpText>Work to evaluate industry- or asset-specific ESG risks has started, either internally or with the support of external advisors.  For assistance in identifying appropriate ESG topics to diligence, please consult the SASB Engagement Guide for topics that may be relevant to the target (available in the Links panel on the right), recognizing that at times several sectors may be applicable, or contact a member of the Public Affairs team (kkresg@kkr.com).</inlineHelpText>
    <label>ESG DD Has Commenced?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>