force-app/main/default/objects/Deal_Clone_One__c/fields/Confirm_Full_ESG_DD_Was_Completed__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Full_ESG_DD_Was_Completed__c</fullName>
    <label>Confirm ESG DD Was Completed</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Awarded_Stage_REE__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>