force-app/main/default/objects/Deal_Clone_One__c/fields/Confirm_GBY__c.field-meta.xml
<CustomField>
    <fullName>Confirm_GBY__c</fullName>
    <label>Confirm GBY?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>REC_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>