force-app/main/default/objects/Deal_Clone_One__c/fields/Convenant__c.field-meta.xml
<CustomField>
    <fullName>Convenant__c</fullName>
    <label>Convenant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>