force-app/main/default/objects/Deal_Clone_One__c/fields/Core_Team__c.field-meta.xml
<CustomField>
    <fullName>Core_Team__c</fullName>
    <description>Could potentially re-purpose if we need additional fields in the future. Used to determine the core PE deal team.</description>
    <label>Core Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>