force-app/main/default/objects/Deal_Clone_One__c/fields/Country_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Country_Reporting__c</fullName>
    <formula>IF( Deal_Country__c &lt;&gt; &quot;&quot; , Deal_Country__r.Abbreviation__c , TEXT( Re__c ) )</formula>
    <label>Country (Reporting)</label>
    <type>Text</type>
</CustomField>