force-app/main/default/objects/Deal_Clone_One__c/fields/Coversheet_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Coversheet_Reporting__c</fullName>
    <formula>IF( OR ( INCLUDES ( BU__c, &quot;AMPE&quot;), INCLUDES (BU__c,&quot;AMPE-Core&quot;) ), &quot;AMPE&quot; , 
IF( INCLUDES (BU__c, &quot;Healthcare Strategic Growth&quot;), &quot;HCSG&quot; , 
IF( INCLUDES (BU__c, &quot;Healthcare Royalty and Income&quot;), &quot;HCRI&quot;, 
IF( INCLUDES (BU__c, &quot;NGT&quot;), &quot;NGT&quot;,&quot;AMPE&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coversheet (Reporting)</label>
    <type>Text</type>
</CustomField>