force-app/main/default/objects/Deal_Clone_One__c/fields/Create_new_code_or_revive_old__c.field-meta.xml
<CustomField>
    <fullName>Create_new_code_or_revive_old__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If existing deal code for this deal is marked dead, please confirm if historic costs incurred can be recuperated, if this deal results in a consummated deal (i.e. portfolio company).</description>
    <inlineHelpText>If existing deal code for this deal is marked dead, please confirm if historic costs incurred can be recuperated, if this deal results in a consummated deal (i.e. portfolio company).</inlineHelpText>
    <label>Create new code or revive old</label>
    <type>Checkbox</type>
</CustomField>