force-app/main/default/objects/Deal_Clone_One__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>