force-app/main/default/objects/Deal_Clone_One__c/fields/CS__c.field-meta.xml
<CustomField>
    <fullName>CS__c</fullName>
    <inlineHelpText>Status Definitions:
Include: show the deal and details on the weekly JYB/SCN report
Remove: flag the deal as being removed from priority status for the weekly JYB/SCN report
--None--: do not show on the weekly JYB/SCN report</inlineHelpText>
    <label>Curated Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Include</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
            <value>
                <fullName>--</fullName>
                <isActive>false</isActive>
                <label>--</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>