force-app/main/default/objects/Deal_Clone_One__c/fields/Cumulative_Hours_Batch__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Hours_Batch__c</fullName>
    <label>Upcoming Week&apos;s Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>