force-app/main/default/objects/Deal_Clone_One__c/fields/Cur_IF__c.field-meta.xml
<CustomField>
    <fullName>Cur_IF__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>