force-app/main/default/objects/Deal_Clone_One__c/fields/Cur_Revenue_Common__c.field-meta.xml
<CustomField>
    <fullName>Cur_Revenue_Common__c</fullName>
    <formula>IF(NOT ( ISBLANK( TEXT ( Currency_Revenue__c ) ) ), TEXT ( Currency_Revenue__c ), 
IF(NOT ( ISBLANK( TEXT ( CurrencyIsoCode ) ) ), TEXT ( CurrencyIsoCode ), 
Null ) )</formula>
    <label>Revenue Currency - Common</label>
    <type>Text</type>
</CustomField>