force-app/main/default/objects/Deal_Clone_One__c/fields/Cur_TEV_Common__c.field-meta.xml
<CustomField>
    <fullName>Cur_TEV_Common__c</fullName>
    <formula>IF(NOT ( ISBLANK( TEXT ( Currency_TEV__c ) ) ), TEXT ( Currency_TEV__c ),
IF(NOT ( ISBLANK( TEXT ( DsCur__c ) ) ), TEXT ( DsCur__c ),
IF(NOT ( ISBLANK( TEXT ( CurrencyIsoCode ) ) ), TEXT ( CurrencyIsoCode ),
Null ) ) )</formula>
    <label>TEV Currency - Common</label>
    <type>Text</type>
</CustomField>