force-app/main/default/objects/Deal_Clone_One__c/fields/Curated_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Curated_Status_Date__c</fullName>
    <label>Curated Status Date</label>
    <type>Date</type>
</CustomField>