force-app/main/default/objects/Deal_Clone_One__c/fields/CuratedAddOnCount__c.field-meta.xml
<CustomField>
    <fullName>CuratedAddOnCount__c</fullName>
    <label>CuratedAddOnCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>