force-app/main/default/objects/Deal_Clone_One__c/fields/CuratedAddOnCountRed__c.field-meta.xml
<CustomField>
    <fullName>CuratedAddOnCountRed__c</fullName>
    <label>CuratedAddOnCountRed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>