force-app/main/default/objects/Deal_Clone_One__c/fields/Currency_Equity_Need_Common__c.field-meta.xml
<CustomField>
    <fullName>Currency_Equity_Need_Common__c</fullName>
    <formula>IF(NOT ( ISBLANK( TEXT ( Currency_Equity_Need__c ) ) ), TEXT ( Currency_Equity_Need__c ), 
IF(NOT ( ISBLANK( TEXT ( ENCur__c ) ) ), TEXT ( ENCur__c ), 
IF(NOT ( ISBLANK( TEXT ( CurrencyIsoCode ) ) ), TEXT ( CurrencyIsoCode ), 
Null ) ) )</formula>
    <label>Equity Need Currency - Common</label>
    <type>Text</type>
</CustomField>