force-app/main/default/objects/Deal_Clone_One__c/fields/Currency_KKR_Investment_Common__c.field-meta.xml
<CustomField>
    <fullName>Currency_KKR_Investment_Common__c</fullName>
    <formula>IF(NOT ( ISBLANK( TEXT ( Currency_KKR_Investment__c ) ) ), TEXT ( Currency_KKR_Investment__c ), 
IF(NOT ( ISBLANK( TEXT ( KECur__c ) ) ), TEXT ( KECur__c ), 
IF(NOT ( ISBLANK( TEXT ( CurrencyIsoCode ) ) ), TEXT ( CurrencyIsoCode ), 
Null ) ) )</formula>
    <label>KKR Investment Currency - Common</label>
    <type>Text</type>
</CustomField>