force-app/main/default/objects/Deal_Clone_One__c/fields/Currency_TEV__c.field-meta.xml
<CustomField>
    <fullName>Currency_TEV__c</fullName>
    <label>Currency (TEV)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>