force-app/main/default/objects/Deal_Clone_One__c/fields/current_action_items_for_report__c.field-meta.xml
<CustomField>
    <fullName>current_action_items_for_report__c</fullName>
    <description>Actions Items for Deal Flow Tracker Report</description>
    <inlineHelpText>Should NOT be visible on any layout</inlineHelpText>
    <label>Current Action Items for Report</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>