force-app/main/default/objects/Deal_Clone_One__c/fields/Current_Leasing__c.field-meta.xml
<CustomField>
    <fullName>Current_Leasing__c</fullName>
    <label>Current Leasing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>