force-app/main/default/objects/Deal_Clone_One__c/fields/Current_Net_Production_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Net_Production_Date__c</fullName>
    <label>Current Net Production Date</label>
    <type>Date</type>
</CustomField>