force-app/main/default/objects/Deal_Clone_One__c/fields/Current_Net_Production_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Current_Net_Production_Reporting__c</fullName>
    <formula>IF ( ISBLANK ( CNP__c ) , &quot;N/A&quot; , CNP__c )</formula>
    <label>Current Net Production (Reporting)</label>
    <type>Text</type>
</CustomField>