force-app/main/default/objects/Deal_Clone_One__c/fields/Current_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner_Name__c</fullName>
    <label>Current Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>