force-app/main/default/objects/Deal_Clone_One__c/fields/Date_Active_Original__c.field-meta.xml
<CustomField>
    <fullName>Date_Active_Original__c</fullName>
    <label>Date Active (Original)</label>
    <type>Date</type>
</CustomField>