force-app/main/default/objects/Deal_Clone_One__c/fields/Date_Eliminated__c.field-meta.xml
<CustomField>
    <fullName>Date_Eliminated__c</fullName>
    <label>Date Eliminated</label>
    <type>Date</type>
</CustomField>