force-app/main/default/objects/Deal_Clone_One__c/fields/Date_High_Priority_Original__c.field-meta.xml
<CustomField>
    <fullName>Date_High_Priority_Original__c</fullName>
    <label>Date High Priority (Original)</label>
    <type>Date</type>
</CustomField>