force-app/main/default/objects/Deal_Clone_One__c/fields/Date_Initiated_Original__c.field-meta.xml
<CustomField>
    <fullName>Date_Initiated_Original__c</fullName>
    <label>Date Initiated (Original)</label>
    <type>Date</type>
</CustomField>