force-app/main/default/objects/Deal_Clone_One__c/fields/Date_Monitored__c.field-meta.xml
<CustomField>
    <fullName>Date_Monitored__c</fullName>
    <label>Date Monitored</label>
    <type>Date</type>
</CustomField>