force-app/main/default/objects/Deal_Clone_One__c/fields/Date_of_Divestiture__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Divestiture__c</fullName>
    <label>Date of Divestiture</label>
    <type>Date</type>
</CustomField>