force-app/main/default/objects/Deal_Clone_One__c/fields/Date_Priority__c.field-meta.xml
<CustomField>
    <fullName>Date_Priority__c</fullName>
    <label>Date Priority</label>
    <type>Date</type>
</CustomField>