force-app/main/default/objects/Deal_Clone_One__c/fields/DC__c.field-meta.xml
<CustomField>
    <fullName>DC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Team Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Contact</value>
        </filterItems>
        <filterItems>
            <field>Contact.Current_Employee__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (as Deal Team Contact)</relationshipLabel>
    <relationshipName>Projects_Clone</relationshipName>
    <type>Lookup</type>
</CustomField>