force-app/main/default/objects/Deal_Clone_One__c/fields/Dead_Infra__c.field-meta.xml
<CustomField>
    <fullName>Dead_Infra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dead?</label>
    <type>Checkbox</type>
</CustomField>