force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Aux__c.field-meta.xml
<CustomField>
    <fullName>Deal_Aux__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Aux</label>
    <referenceTo>Deal_Aux__c</referenceTo>
    <relationshipLabel>Related Deal</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>