force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Budget_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Deal_Budget_Expenditure__c</fullName>
    <label>Deal Budget (USD Actual)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>