force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Budget_Source__c.field-meta.xml
<CustomField>
    <fullName>Deal_Budget_Source__c</fullName>
    <defaultValue>&quot;Deal&quot;</defaultValue>
    <label>Asia Deal Budget Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IC Note</fullName>
            </value>
            <value>
                <fullName>Deal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>