force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Code_Action__c.field-meta.xml
<CustomField>
    <fullName>Deal_Code_Action__c</fullName>
    <description>The option which picks whether a new deal code needs to be created or revive an existing deal code for the deal which has been marked dead</description>
    <label>Deal Code Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create new deal code</fullName>
            </value>
            <value>
                <fullName>Recuperate historic costs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>