force-app/main/default/objects/Deal_Clone_One__c/fields/Deal_Code_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Deal_Code_Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>will be populated via process builder</description>
    <label>Deal Code Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>